--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MERN Boilerplate</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet"> -->
   <link rel="icon" type="image/png" href="/favicon.ico" sizes="16x16">
 </head>
 <body>
