updated packages, project population

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MERN Boilerplate</title>
+  <title>georgefinn</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet"> -->
   <link rel="icon" type="image/png" href="/favicon.ico" sizes="16x16">
 </head>
