--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>georgefinn</title>
-  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet"> -->
-</head>
-<body>
-  <div id="app"></div>
-</body>
+<html>
+  <head>
+  </head>
+  <body>
+    <script src="/main-bundle.js"></script>
+  </body>
 </html>
